--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -169,7 +169,7 @@ Aufgaben der Klasse: GUI des User Screens
                 </div>
                 <font color="#000035">
                 <div class="form-group">
-                    <input class="btngotologin" type="button" onclick="window.location.href = '/';" value="Go to Login"/>
+                    <input class="btngotologin" type="button" onclick="window.location.href = '/index.html';" value="Go to Login"/>
                 </div>
                 </font>
             </form>
